--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/chjtx/rollup-plugin-jtaro-module#readme",
   "dependencies": {
     "rollup-pluginutils": "^1.5.2",
-    "source-map": "^0.5.6"
+    "source-map": "^0.5.6",
+    "@vue/component-compiler-utils": "^2.3.0",
+    "vue-template-compiler": "^2.5.17"
   }
 }
